kubernetes/etherpad.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    node.type: etherpad-server
  name: etherpad-server
 # namespace: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pad-just-smart
  template:
    metadata:
      labels:
        app: pad-just-smart
    spec:
      containers:
        - name: etherpad-server
          image: ciccio2305/justsmartetherpad:latest
          ports:
            - containerPort: 9001
              protocol: TCP
          volumeMounts:
            - name: apikey-volume
              mountPath: /opt/etherpad-lite/APIKEY.txt 
              subPath: APIKEY.txt
      restartPolicy: Always
      volumes:
        - name: apikey-volume
          configMap:
            name: etherpad-apikey-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    es.service: etherpad-server-service
  name: etherpad-server-service
  #namespace: elk
spec:
  ports:
    - name: "http"
      port: 9001
      nodePort: 30081
  selector:
    app: pad-just-smart
  type: NodePort
