kubernetes/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  # Headless service per la comunicazione tra i pod del replica set

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: ciccio2305/justsmartmongo:latest
          args: ["--replSet", "rs0"]
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - >
                  mongosh --quiet --eval "try { rs.initiate() } catch(e) { rs.status().ok }" | grep 1
            initialDelaySeconds: 5
            periodSeconds: 30
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
