kubernetes/server_python.yml
#kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    node.type: python-server
  name: python-server
spec:
  replicas: 2 # Numero iniziale di repliche (HPA modificherà dinamicamente questo valore)
  selector:
    matchLabels:
      app: just-smart
  template:
    metadata:
      labels:
        app: just-smart
    spec:
      containers:
        - name: python-server
          image: ciccio2305/justsmartserver1:latest
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 1000m
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    es.service: python-server-service
  name: python-server-service
spec:
  ports:
    - name: "http"
      port: 5000
      nodePort: 30082
  selector:
    app: just-smart
  type: NodePort
