kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    #nginx.ingress.kubernetes.io/proxy-cookie-domain: "justsmart.it"
spec:
  rules:
  - host: justsmart.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-server-service
            port:
              number: 5000
  - host: pad.justsmart.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etherpad-server-service
            port:
              number: 9001
  - host: chat.justsmart.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tinode-service
            port:
              number: 6060
